<resources>
    <string name="acb_title_bar_back">返回</string>
    <string name="add_rescue_info">添加救援信息</string>
    <string name="agreement">免责声明</string>
    <string name="alert_cancel">取消</string>
    <string name="alert_clean">清空</string>
    <string name="alert_clear_history_des">是否确认清空历史目的地</string>
<string name="alert_close">知道了</string>
<string name="alert_common_data_not_download">必须下载全国基础包，才可以使用离线功能。</string>
<string name="alert_confirm">确定</string>
<string name="alert_confirm_a">我知道了</string>
    <string name="alert_continue_last_navi_tips">是否继续上一次导航</string>
    <string name="alert_delete">是否确认删除？</string>
    <string name="alert_delete_comp_addr">确定要删除“公司”的当前地址吗？</string>
    <string name="alert_delete_home_addr">确定要删除“家”的当前地址吗？</string>
    <string name="alert_delete_navi_cache">删除导航缓存</string>
    <string name="alert_delete_navi_cache_content">您确定要删除导航缓存吗？</string>
    <string name="alert_disclaimer">免责声明</string>
    <string name="alert_download_apk_title">下载更新</string>
    <string name="alert_engine_init_failed">初始化失败，请先检查sd卡是否有足够空间或者尝试重启手机</string>
    <string name="alert_exit_cur_navi">是否取消当前导航？</string>
    <string name="alert_goto_download">去下载</string>
    <string name="alert_gps_not_open_and_set">需要开启GPS哦，否则小度无法定位</string>
    <string name="alert_gps_setting">去设置</string>
    <string name="alert_i_know">我知道了</string>
    <string name="alert_know">知道了</string>
    <string name="alert_no_net_data_info">"网络连接失败!

请检查网络连接或登录官方网站下载离线地图数据"</string>
    <string name="alert_no_sdcard">SD卡异常，请退出程序检查SD卡设置！</string>
    <string name="alert_no_valid_data_info">"没有地图数据

您可以根据需要选择省份下载地图，或直接在线使用"</string>
    <string name="alert_notification">提示</string>
    <string name="alert_online_use">在线使用</string>
    <string name="alert_quit">退出</string>
    <string name="alert_quit_app_content">您确定要退出CarLife吗？</string>
    <string name="alert_retry">重试</string>
    <string name="alert_sdcard_cannot_use">您的SD卡不可用，请检查SD卡！</string>
    <string name="alert_sdcard_no_choose">请先选择数据存放路径</string>
    <string name="alert_setting">设置</string>
    <string name="alert_title_choose_sdcard">选择存储卡</string>
    <string name="alert_update_apk_no_network">网络已经断开，无法完成软件升级，你可以打开网络以后在关于页面完成软件升级。</string>
    <string name="alert_update_apk_now">立即更新</string>
    <string name="alert_update_apk_title">版本更新</string>
    <string name="app_name">百度 CarLife</string>
    <string name="auth_click">点击确定</string>
    <string name="auth_msg">为确保连接成功，请允许CarLife的授权请求</string>
    <string name="auth_title">授权请求</string>
    <string name="auto_mode">自动</string>
    <string name="bdim_error">无法响应操作，请重新连接或重启手机！</string>
    <string name="bnav_string_nav_node_company">公司</string>
    <string name="bnav_string_nav_node_home">家</string>
    <string name="bnav_string_rg_unknown_road">未知路</string>
    <string name="bnav_string_route_plan_map_point">地图上的点</string>
    <string name="bnav_string_route_plan_node_my_pos">我的位置</string>
    <string name="btn_call">呼叫</string>
    <string name="button_ok">OK</string>
    <string name="cancel_download">是否取消下载？</string>
    <string name="car_navi_failed_to_init_tts">语音播报模块初始化失败</string>
    <string name="carlife_feedback_contact">联系方式</string>
    <string name="carlife_feedback_contact_email">官方邮箱：CarLife@baidu.com</string>
    <string name="carlife_feedback_contact_qq">用户反馈QQ群: 419328050</string>
    <string name="carlife_feedback_content_hint">请填写您在使用CarLife期间遇到的问题和建议。如涉及到手机-车机互联状态下的问题，请详细描述具体的汽车品牌和车型</string>
    <string name="carlife_feedback_content_num_count">/400</string>
    <string name="carlife_feedback_email_hint">填写您的手机号或邮箱</string>
    <string name="carlife_feedback_function_excetion">功能异常</string>
    <string name="carlife_feedback_function_suggest">功能建议</string>
    <string name="carlife_feedback_other_question">其他问题</string>
    <string name="carlife_feedback_photo_question">上传问题图片 (单张图片少于2M)</string>
    <string name="carlife_map_car_plate_digits">0123456789abcdefghigklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzABCDEFGHIGKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="carlife_map_ctrl_address">常用地址</string>
    <string name="carlife_map_ctrl_around">搜周边</string>
    <string name="carlife_map_ctrl_cruise">电子狗</string>
    <string name="carlife_map_ctrl_favorite">收藏夹</string>
    <string name="carlife_map_ctrl_its">实时路况</string>
    <string name="carlife_map_ctrl_search_around">搜索目的地</string>
    <string name="carlife_map_data_NO_WIFI">非WiFi，已暂停，剩</string>
    <string name="carlife_map_data_auto_download">Wi-Fi下自动更新</string>
    <string name="carlife_map_data_auto_download_hint">最新离线包，图最新，点最全，搜索更便捷</string>
    <string name="carlife_map_data_cancel">取消</string>
    <string name="carlife_map_data_china_hint">(离线必备，勿删)</string>
    <string name="carlife_map_data_chose_city">选择城市</string>
    <string name="carlife_map_data_city">当前城市</string>
    <string name="carlife_map_data_city_downloaded">该城市已下载</string>
    <string name="carlife_map_data_cityall">全部城市</string>
    <string name="carlife_map_data_comfirm">确认</string>
    <string name="carlife_map_data_delete">你要删除该地图?</string>
    <string name="carlife_map_data_download">正在下载，剩</string>
    <string name="carlife_map_data_download_city">该城市正在下载</string>
    <string name="carlife_map_data_download_finish">下载完成</string>
    <string name="carlife_map_data_download_hint">基础必备包，请勿删除！</string>
    <string name="carlife_map_data_download_manager">离线地图</string>
    <string name="carlife_map_data_downloaded">已下载</string>
    <string name="carlife_map_data_downloading">正在下载</string>
    <string name="carlife_map_data_finish">完成</string>
    <string name="carlife_map_data_hint">输入城市名称或首字母</string>
    <string name="carlife_map_data_need_update">有更新，只需</string>
    <string name="carlife_map_data_net_error">网络异常，剩</string>
    <string name="carlife_map_data_parse">正在解压缩...</string>
    <string name="carlife_map_data_pause">已暂停，剩</string>
    <string name="carlife_map_data_update">正在更新，剩</string>
    <string name="carlife_map_data_waiting_download">等待下载，剩</string>
    <string name="carlife_map_data_waiting_update">等待更新，剩</string>
    <string name="carlife_person_ctrl_about">关于</string>
    <string name="carlife_person_ctrl_help">帮助反馈</string>
    <string name="carlife_person_ctrl_journey_setting">行程设置</string>
    <string name="carlife_person_ctrl_map_setting">地图设置</string>
    <string name="carlife_person_ctrl_voice_setting">语音设置</string>
    <string name="carlife_update_backstage">后台升级</string>
    <string name="carlife_update_cancel">取消</string>
    <string name="carlife_update_click_to_install">点击安装</string>
    <string name="carlife_update_download_again">当前升级包有误，请稍后重试</string>
    <string name="carlife_update_download_failed_dialog_content">由于网络问题未成功下载</string>
    <string name="carlife_update_download_failed_dialog_retry">重新下载</string>
    <string name="carlife_update_download_failed_dialog_title">下载失败</string>
    <string name="carlife_update_download_finish">CarLife 下载完成</string>
    <string name="carlife_update_no_network">网络未连接，请检查网络后重试</string>
    <string name="carlife_update_no_new_version">当前应用已经是最新版本</string>
    <string name="carlife_update_tips_dialog_cancel">以后再说</string>
    <string name="carlife_update_tips_dialog_confirm">马上更新</string>
    <string name="carlife_update_tips_dialog_exit">退出</string>
    <string name="carlife_update_tips_dialog_title">更新提示</string>
    <string name="carlife_update_wait_for_complete">请等待当前更新完成</string>
    <string name="carmode_default_tip_in_edittext">请输入目的地</string>
    <string name="carmode_go_company">去公司</string>
    <string name="carmode_go_home">回家</string>
    <string name="carmode_order">排序</string>
    <string name="check_all_items">全选</string>
    <string name="check_update">检查更新</string>
    <string name="checking_update">正在检查更新...</string>
    <string name="command_error_please_retry">输入指令不正确，请重新输入</string>
    <string name="common_error_empty">小度已经尽力，请重试</string>
    <string name="common_error_nogps">小度提醒您，请检查GPS设置</string>
    <string name="common_error_nonetwork">小度提醒您，请检查网络</string>
    <string name="common_tip_reload">刷新</string>
    <string name="commonquestion_setting_title">常见问题</string>
    <string name="complete_rescue_info">完善救援信息，为您的救援节约宝贵时间</string>
    <string name="component_radar_tips_net_fail">网络不可用，请检查后重试</string>
    <string name="connectguide_dialog_hint">无法连接，请开启USB调试</string>
    <string name="connectguide_dialog_ok">去设置</string>
    <string name="connectguide_dialog_title">USB调试开启</string>
    <string name="connectguide_setting_authorization_request">允许手机上弹出的授权请求</string>
    <string name="connectguide_setting_check_content">连接后手机处于充电状态，但无法建立连接，可能是您的USB线仅支持充电，不支持数据传输，您可以换根数据线后尝试重连</string>
    <string name="connectguide_setting_check_title">检查数据线并重新连接</string>
    <string name="connectguide_setting_goto_setting">打开“USB调试模式”</string>
    <string name="connectguide_setting_reboot">尝试重启手机再次连接</string>
    <string name="connectguide_setting_title">连接帮助</string>
    <string name="continue_last_navi_cancel">取消</string>
    <string name="continue_last_navi_ok">继续导航</string>
    <string name="cruise_follow_enter_cruise_prompt_cotent">卫星定位成功,正在为您探测电子眼。</string>
    <string name="cruise_follow_enter_prompt_content">您已进入巡航跟车模式</string>
    <string name="cruise_follow_voice_turn_off">巡航跟车播报已静音</string>
    <string name="cruise_follow_voice_turn_on">巡航跟车播报已开启</string>
    <string name="data_merge_forbit_del">数据准备过程中不能删除数据</string>
    <string name="data_ver_not_match_download">去下载</string>
    <string name="data_ver_not_match_online">在线使用</string>
    <string name="data_ver_not_match_tips">导航数据优化升级，部分数据需要重新下载</string>
    <string name="day_mode">白天</string>
    <string name="day_night_title">日夜模式</string>
    <string name="default_poi_name">未知地名</string>
    <string name="del_common_data_notification">请先删除全部省市包，删除后将不能使用离线功能!</string>
    <string name="del_comp_addr_fail">删除公司地址失败！</string>
    <string name="del_comp_addr_sucess">删除公司地址成功！</string>
    <string name="del_home_addr_fail">删除家庭地址失败！</string>
    <string name="del_home_addr_sucess">删除家庭地址成功！</string>
    <string name="del_navi_data_notification">导航资源删除后将无法恢复，如需使用可重新下载。确定立即删除？</string>
    <string name="detail_add_favorite">收藏</string>
    <string name="map_gps_number">北京百度网讯科技有限公司提供服务 | 北京长地万方科技有限公司编制 | 审图号: GS（2017）2638号</string>
    <string name="pref_route_plan_mode">算路方式优先</string>
    <string name="pref_search_mode">搜索方式优先</string>
    <string name="service_terms">服务条款</string>
    <string name="speak_content_title">播报内容</string>
    <string name="speak_elec_eye">电子眼</string>
    <string name="speak_limit_speed">限速提醒</string>
    <string name="speak_mode_title">播报模式</string>
    <string name="speak_road_condition">前方路况</string>
    <string name="speak_safe_drive">安全驾驶</string>
    <string name="speak_straight">直行顺行提醒</string>
    <string name="user_logout">退出登录</string>
    <string name="version_right">©2018 baidu.com, all rights reserved</string>
    <string name="wifi_helper_alert_msg">为您连接正规WIFI热点,保障信息安全</string>
    <string name="wifi_helper_alert_title">是否安装免费WIFI插件</string>
    <string name="wifi_helper_negative">安装(0.5M)</string>
    <string name="wifi_helper_positive">取消</string>
    <string name="about">关于</string>
    <string name="default_launch_title">默认启动模式</string>
    <string name="dest_park_search">目的地停车场推送</string>
    <string name="gps_hot_start">GPS热启动</string>
    <string name="navi_screen_awalys_on">导航时屏幕常亮</string>
    <string name="other_setting">其他设置</string>
    <string name="power_save_title">省电模式</string>
    <string name="push_mode_title">消息通知</string>
    <string name="route_guide_end_setting">导航结束页</string>
    <string name="setting">设置</string>
    <string name="setting_ugc_show">躲避点显示</string>
    <string name="speak_setting">语音设置</string>
    <string name="system_setting">系统设置</string>
    <string name="voice_mode_title">小度语音唤醒</string>
    <string name="wifi_auto_update_data">自动更新数据(Wifi环境)</string>
</resources>